# Scanlation

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  PERFORMANCE_PLAN.md  README.md  REFACTORING.md  SCANLATION_DESIGN.md  TODO.md  TRANSLATION_LOG.md  YOMU_DESIGN.md  docker-compose.cuda.yml  docker-compose.rocm.yml  docker-compose.yml  docker-entrypoint.sh
.claude/: settings.json
deploy/: llama-server.service.example  llama.cpp.service.example  nginx.conf.example
extension/: README.md  content.css  manifest.json  options.css  options.html  popup.css  popup.html
extension/src/: background.js  constants.js  content.js  i18n.js  md5.js  options.js  popup.js  service-worker.js  starfield.js  util.js
extension/tests/: run.mjs
server/: Makefile  pyproject.toml
server/app/: __init__.py  config.py  contracts.py  geometry.py  main.py  pipeline.py  prompts.py  registry.py  schemas.py  state.py
server/app/routes/: admin.py  handshake.py  plugins.py  run.py  settings_routes.py
server/app/web/: app.js  index.html  style.css
server/plugins/: __init__.py  llm_prompt.py
server/plugins/detector_ctd/: decode.py  plugin.py
server/plugins/dummy/: plugin.py
server/plugins/recognizer_mangaocr/: plugin.py
server/plugins/translator_llamacpp/: plugin.py
server/plugins/translator_ollama/: plugin.py
server/tests/: __main__.py  conftest.py  helpers.py  test_contracts.py  test_ctd.py  test_ctd_decode.py  test_geometry.py  test_llamacpp.py  test_mangaocr.py  test_ollama.py  test_pipeline.py  test_routes.py
server/tools/: install.py  run_image.py  visualize.py
