[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scanlation-server"
version = "0.1.0"
description = "Contract-based manga OCR + in-place translation server (core; engines are separate pip packages)."
requires-python = ">=3.11"
dependencies = [
    "scanlation-sdk",
    "fastapi",
    "uvicorn[standard]",
    "numpy",
    "pillow",
    "opencv-python-headless",
    "httpx",
    "pydantic>=2",
]

# --- Engine discovery is entry_points-only (no hardcoded map). Only the `dummy`
# test doubles ship with the core; real engines (ctd, mangaocr, ollama, llamacpp)
# are separate pip packages declaring the same `scanlation.<role>` groups and are
# auto-discovered on install. ---
[project.entry-points."scanlation.detectors"]
dummy = "plugins.dummy.plugin:DummyDetector"

[project.entry-points."scanlation.recognizers"]
dummy = "plugins.dummy.plugin:DummyRecognizer"

[project.entry-points."scanlation.translators"]
dummy = "plugins.dummy.plugin:DummyTranslator"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "plugins*"]
